[package]
name = "tuple-space-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuple-space = {git = "ssh://misc.aimred.com/var/local/git/TupleSpace/tuple-space"}
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde = "1.0"
