[package]
name = "tuple-space-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuple-space = {git = "ssh://misc.aimred.com/var/local/git/TupleSpace/tuple-space"}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
url = "2"
